fix overflow long messages

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body{
     margin-top: 10px;
     display: flex;
     flex-direction: column;
-
+    overflow-wrap: anywhere;
 }
 .message-box small{
     align-self: flex-end;
